Update portfolio, resume and about

--- a/resume.html
+++ b/resume.html
@@ -52,12 +52,12 @@
 								</div>
 								<div class="left-data">
 									<span class="mdl-color-text--white">
-										I'm a senior Software Engireenr with 5+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
+										I'm a senior Software Engineer with 6+ years of experience working on mobile applications Android (Java and Kotlin), iOS (Swift) and cross platforms (ReactNative and Cordova).
 									</span>
 									<br>
 									<br>
 									<span class="mdl-color-text--white">
-										Over the last 5 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
+										Over the last 6 years, I have developed many native Android, iOS and cross platform applications using Java, Kotlin, Swift, ReactNative, XML, MySQL, JSON, HTML 5, CSS, JavaScript and Cordova. Besides, I have experiences in Web and developed some web services. As well as writing automation tests using Appium.
 									</span>
 								</div>
 								<div class="left-title-div-big">
@@ -89,20 +89,29 @@
 										</div>
 									</div>
 									<div class="contact-item">
-										<div class="icon material-icons round-btn-left-small"><img src="img/cordova.png" alt="Cordova"></div>
-										<div class="mdl-color-text--white left-data-text">
-											Cross Development (Cordova)
-											<div class="progress progress-outer">
-												<div class="progress progress-inner" style="width: 85%;"></div>
-											</div>
-										</div>
-									</div>
-									<div class="contact-item">
 										<div class="icon material-icons round-btn-left-small"><img src="img/apple.svg" alt="iOS"></div>
 										<div class="mdl-color-text--white left-data-text">
 											iOS Development (Swift)
 											<div class="progress progress-outer">
 												<div class="progress progress-inner" style="width: 70%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class="icon material-icons round-btn-left-small"><img src="img/react.png" alt="ReactNative"></div>
+										<div class="mdl-color-text--white left-data-text">
+											Cross Development (ReactNative)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 80%;"></div>
+											</div>
+										</div>
+									</div>
+									<div class="contact-item">
+										<div class="icon material-icons round-btn-left-small"><img src="img/cordova.png" alt="Cordova"></div>
+										<div class="mdl-color-text--white left-data-text">
+											Cross Development (Cordova)
+											<div class="progress progress-outer">
+												<div class="progress progress-inner" style="width: 85%;"></div>
 											</div>
 										</div>
 									</div>
@@ -169,7 +178,7 @@
 								<div class="right-title-big">Work Experience</div>
 							</div>
 							<div class="right-content">
-								<div class="right-title-small">Senior Android Application Developer</div>
+								<div class="right-title-small">Senior Mobile Application Developer</div>
 								<div class="mdl-grid no-padding">
 									<div class="mdl-cell mdl-cell--5-col">
 										<div class="icon material-icons place right-place-icons">domain</div>
@@ -183,6 +192,12 @@
 								<div class="right-details">
 									<p>
 										Developing native Android applications using Java, Kotlin, XML and Android Studio.
+									</p>
+									<p>
+										Developing native iOS applications using Swift and XCode.
+									</p>
+									<p>
+										Developing cross platform mobile applications using ReactNative.
 									</p>
 								</div>
 								<div class="right-title-small">Senior Mobile Software Developer</div>
