--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
 						<div class="mdl-grid portfolio-copy">
 							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
 								<p>
-									I'm a senior Software Engineer with 5+ years of experience working on mobile applications Android, cross platform (Cordova) and iOS.
+									I'm a senior Software Engineer with 6+ years of experience working on mobile applications Android (Java and Kotlin), iOS (Swift) and cross platforms (ReactNative and Cordova).
 								</p>
 								<p>
-									Over the last 5 years, I have developed many native Android, iOS and cross platform applications using Java, XML, MySQL, JSON, HTML 5, CSS, JavaScript, Cordova and Swift. Besides, I have experience in Web and developed some web services. As well as writing automation tests using Appium.
+									Over the last 6 years, I have developed many native Android, iOS and cross platform applications using Java, Kotlin, Swift, ReactNative, XML, MySQL, JSON, HTML 5, CSS, JavaScript and Cordova. Besides, I have experiences in Web and developed some web services. As well as writing automation tests using Appium.
 								</p>
 							</div>
 						</div>
