--- a/resume.html
+++ b/resume.html
@@ -304,7 +304,7 @@
 										Graduation project "Interactive School Tablet".
 									</p>
 									<p>
-										Awarded Injaz Egypt price for graduation project.
+										Awarded Injaz Egypt prize for graduation project.
 									</p>
 								</div>
 							</div>
