--- a/about.html
+++ b/about.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-		<title>About Me || Eslam El-Meniawy</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="css/styles.css" />
-	</head>
-	<body>
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-			<header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-				<div class="mdl-layout__header-row portfolio-logo-row">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Eslam El-Meniawwy portfolio website.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>About Me || Eslam El-Meniawy</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
+        <div class="mdl-layout__header-row portfolio-logo-row">
 					<span class="mdl-layout__title">
 						<div class="portfolio-logo"></div>
 						<span class="mdl-layout__title">Eslam El-Meniawy</span>
 					</span>
-				</div>
-				<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-					<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-						<a class="mdl-navigation__link" href="/">Portfolio</a>
-						<a class="mdl-navigation__link" href="resume.html">Resume</a>
-						<a class="mdl-navigation__link is-active" href="about.html">About Me</a>
-						<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
-					</nav>
-				</div>
-			</header>
-			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
-				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link" href="/">Portfolio</a>
-					<a class="mdl-navigation__link" href="resume.html">Resume</a>
-					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="about.html">About Me</a>
-					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
-				</nav>
-			</div>
-			<main class="mdl-layout__content">
-				<div class="mdl-grid portfolio-max-width">
-					<div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__title">
-							<h2 class="mdl-card__title-text">About Me</h2>
-						</div>
-						<div class="mdl-grid portfolio-copy">
-							<div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-								<p>
-									I'm a senior Software Engineer with 6+ years of experience working on mobile applications Android (Java and Kotlin), iOS (Swift) and cross platforms (ReactNative and Cordova).
-								</p>
-								<p>
-									Over the last 6 years, I have developed many native Android, iOS and cross platform applications using Java, Kotlin, Swift, ReactNative, XML, MySQL, JSON, HTML 5, CSS, JavaScript and Cordova. Besides, I have experiences in Web and developed some web services. As well as writing automation tests using Appium.
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</main>
-		</div>
-		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	</body>
+        </div>
+        <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
+            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                <a class="mdl-navigation__link" href="/">Portfolio</a>
+                <a class="mdl-navigation__link" href="resume.html">Resume</a>
+                <a class="mdl-navigation__link is-active" href="about.html">About Me</a>
+                <a class="mdl-navigation__link" href="contact.html">Contact Me</a>
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+            <a class="mdl-navigation__link" href="/">Portfolio</a>
+            <a class="mdl-navigation__link" href="resume.html">Resume</a>
+            <a class="mdl-navigation__link mdl-navigation__link--current is-active" href="about.html">About Me</a>
+            <a class="mdl-navigation__link" href="contact.html">Contact Me</a>
+        </nav>
+    </div>
+    <main class="mdl-layout__content">
+        <div class="mdl-grid portfolio-max-width">
+            <div class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp">
+                <div class="mdl-card__title">
+                    <h2 class="mdl-card__title-text">About Me</h2>
+                </div>
+                <div class="mdl-grid portfolio-copy">
+                    <div id="container" class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding"></div>
+                </div>
+            </div>
+        </div>
+    </main>
+</div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</body>
 </html>
