--- a/about.html
+++ b/about.html
@@ -51,5 +51,6 @@
     </main>
 </div>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script type="text/javascript" src="js/about.js"></script>
 </body>
 </html>
