--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
     </main>
 </div>
 <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/about.js"></script>
 </body>
 </html>
