--- a/details.html
+++ b/details.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-		<title>Portfolio || Eslam El-Meniawy</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="css/styles.css" />
-	</head>
-	<body>
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-			<header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
-				<div class="mdl-layout__header-row portfolio-logo-row">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Eslam El-Meniawwy portfolio website.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Portfolio || Eslam El-Meniawy</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header mdl-layout__header--waterfall portfolio-header">
+        <div class="mdl-layout__header-row portfolio-logo-row">
 					<span class="mdl-layout__title">
 						<div class="portfolio-logo"></div>
 						<span class="mdl-layout__title">Eslam El-Meniawy</span>
 					</span>
-				</div>
-				<div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
-					<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-						<a class="mdl-navigation__link is-active" href="/">Portfolio</a>
-						<a class="mdl-navigation__link" href="resume.html">Resume</a>
-						<a class="mdl-navigation__link" href="about.html">About Me</a>
-						<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
-					</nav>
-				</div>
-			</header>
-			<div class="mdl-layout__drawer mdl-layout--small-screen-only">
-				<nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-					<a class="mdl-navigation__link mdl-navigation__link--current is-active" href="/">Portfolio</a>
-					<a class="mdl-navigation__link" href="resume.html">Resume</a>
-					<a class="mdl-navigation__link" href="about.html">About Me</a>
-					<a class="mdl-navigation__link" href="contact.html">Contact Me</a>
-				</nav>
-			</div>
-			<main class="mdl-layout__content">
-				<div class="mdl-grid portfolio-max-width">
-					<div id="container" class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
-						<div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
-							<img id="icon" class="details-icon" alt="Details" src="">
-						</div>
-						<div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
-							<h2 id="title" class="mdl-card__title-text"></h2>
-							<div id="download">
-								<a id="android" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
-									android
-								</a>
-								<a id="ios" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
-									<img src="img/apple-white.svg" alt="iOS">
-								</a>
-							</div>
-							<p id="lang"></p>
-							<a id="source" target="_blank" class="source-code">Source code</a>
-						</div>
-						<div id="details" class="mdl-cell mdl-cell--12-col"></div>
-					</div>
-				</div>
-			</main>
-		</div>
-		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/details.js"></script>
-	</body>
+        </div>
+        <div class="mdl-layout__header-row portfolio-navigation-row mdl-layout--large-screen-only">
+            <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+                <a class="mdl-navigation__link is-active" href="/">Portfolio</a>
+                <a class="mdl-navigation__link" href="resume.html">Resume</a>
+                <a class="mdl-navigation__link" href="about.html">About Me</a>
+                <a class="mdl-navigation__link" href="contact.html">Contact Me</a>
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer mdl-layout--small-screen-only">
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+            <a class="mdl-navigation__link mdl-navigation__link--current is-active" href="/">Portfolio</a>
+            <a class="mdl-navigation__link" href="resume.html">Resume</a>
+            <a class="mdl-navigation__link" href="about.html">About Me</a>
+            <a class="mdl-navigation__link" href="contact.html">Contact Me</a>
+        </nav>
+    </div>
+    <main class="mdl-layout__content">
+        <div class="mdl-grid portfolio-max-width">
+            <div id="container" class="mdl-grid mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp no-padding">
+                <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
+                    <img id="icon" class="details-icon" alt="Details" src="">
+                </div>
+                <div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet">
+                    <h2 id="title" class="mdl-card__title-text"></h2>
+                    <div id="download">
+                        <a id="android" target="_blank"
+                           class="icon material-icons round-btn-details left-sidebar-image-bg">
+                            <img src="img/android-white.svg" alt="iOS">
+                        </a>
+                        <a id="ios" target="_blank" class="icon material-icons round-btn-details left-sidebar-image-bg">
+                            <img src="img/apple-white.svg" alt="iOS">
+                        </a>
+                    </div>
+                    <p id="lang"></p>
+                </div>
+                <div id="details" class="mdl-cell mdl-cell--12-col"></div>
+            </div>
+        </div>
+    </main>
+</div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/details.js"></script>
+</body>
 </html>
