--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<meta name="description" content="Eslam El-Meniawwy portfolio website.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		<title>Portfolio || Eslam El-Meniawy</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700">
+		<link rel="canonical" href="https://eslamelmeniawy.github.io/s" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" />
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-pink.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
