--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -66,8 +66,9 @@
         }
       }*/
     </style>
-  <meta name="theme-color" content="#6750A4">
-<link rel="shortcut icon" href="/favicon.ico" /></head>
+    <meta name="theme-color" content="#6750A4" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+  </head>
 
   <body>
     <noscript>
@@ -115,6 +116,9 @@
       </form>
     </noscript>
     <div id="root"></div>
-  <script src="/_expo/static/js/web/AppEntry-052fdc314ea6e6eb148049375976eb81.js" defer></script>
-</body>
+    <script
+      src="_expo/static/js/web/AppEntry-052fdc314ea6e6eb148049375976eb81.js"
+      defer
+    ></script>
+  </body>
 </html>
