--- a/simple-analog-privacy-policy.html
+++ b/simple-analog-privacy-policy.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Privacy Policy</title>
-    <style>
-      body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        padding: 1em;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Privacy Policy - Simple Analog Watch Face</title>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <strong>Privacy Policy</strong>
-    <p>
+    <header>
+      <div class="container">
+        <div class="header-content">
+          <a href="index.html" class="logo">
+          <img src="./logo192.png" alt="Logo" class="logo-img">
+          <span>Eslam ElMeniawy</span>
+        </a>
+          <button class="menu-toggle" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="alt-bg">
+        <div class="container">
+          <h1>Privacy Policy</h1>
+          <div class="policy-content" style="max-width: 800px; margin: 0 auto; line-height: 1.8; color: var(--text-light);">
+            <p>
       This privacy policy applies to the Simple Analog Watch Face app (hereby
       referred to as "Application") for mobile devices that was created by Eslam
       El-Meniawy (hereby referred to as "Service Provider") as a Free service.
@@ -175,5 +198,19 @@
       or have questions about the practices, please contact the Service Provider
       via email at eslam.elmeniawy@gmail.com.
     </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>&copy; 2026 Eslam ElMeniawy. All rights reserved.</p>
+        <p>Built with HTML, CSS & JavaScript</p>
+      </div>
+    </footer>
+
+    <script src="./assets/js/utils.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
