--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="404, Not Found, Error">
   <meta name="author" content="Eslam ElMeniawy">
   <title>404 - Page Not Found</title>
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <style>
     .error-container {
       display: flex;
@@ -133,8 +133,8 @@
   <header>
     <div class="container">
       <div class="header-content">
-        <a href="index.html" class="logo">
-          <img src="./logo192.png" alt="Logo" class="logo-img">
+        <a href="/index.html" class="logo">
+          <img src="/logo192.png" alt="Logo" class="logo-img">
           <span>Eslam ElMeniawy</span>
         </a>
         <button class="menu-toggle" aria-label="Toggle navigation">
@@ -144,10 +144,10 @@
         </button>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/projects.html">Projects</a></li>
+            <li><a href="/resume.html">Resume</a></li>
+            <li><a href="/contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -165,8 +165,8 @@
           Oops! It looks like you've wandered into uncharted territory. The page you're looking for doesn't exist or has been moved.
         </p>
         <div class="error-buttons">
-          <a href="index.html" class="btn btn-primary">Back to Home</a>
-          <a href="projects.html" class="btn btn-secondary">View Projects</a>
+          <a href="/index.html" class="btn btn-primary">Back to Home</a>
+          <a href="/projects.html" class="btn btn-secondary">View Projects</a>
         </div>
       </div>
     </section>
@@ -181,7 +181,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="./assets/js/utils.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="/assets/js/utils.js"></script>
+  <script src="/assets/js/script.js"></script>
 </body>
 </html>
