feat: update projects

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
     <section class="hero">
       <div class="container">
         <h1>My Projects</h1>
-        <p>A comprehensive collection of mobile and web applications I've developed and contributed to.</p>
+        <p>A comprehensive collection of mobile applications I've developed and contributed to.</p>
       </div>
     </section>
 
