--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section>
       <div class="container">
         <h2>Featured Projects</h2>
-        <p>A selection of notable projects I've worked on across mobile platforms and web technologies.</p>
+        <p>A selection of notable projects I've worked on across mobile platforms.</p>
         <div id="featured-projects" class="featured-projects"></div>
         <div class="text-center mt-3">
           <a href="projects.html" class="btn btn-primary">View All Projects</a>
